--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Anshul Sharma'",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
     "body-parser": "^1.20.0",
     "express": "^4.17.3",
     "mongoose": "^6.3.5",
