--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "body-parser": "^1.20.0",
+    "dotenv": "^16.0.1",
     "express": "^4.17.3",
     "mongoose": "^6.3.5",
     "nodemon": "^2.0.16"
