--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "node app.js",
+    "train": "npx trainBot.chatito"
   },
   "author": "Anshul Sharma'",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.27.2",
     "body-parser": "^1.20.0",
+    "chatito": "^2.3.5",
     "dotenv": "^16.0.1",
     "express": "^4.17.3",
     "mongoose": "^6.3.5",
